Link should break out of frame

--- a/app/views/collections/edit/_workflows.html.erb
+++ b/app/views/collections/edit/_workflows.html.erb
@@ -19,5 +19,5 @@
       </div>
     <% end %>
   </div>
-  <p class="margin-block-end-double"><%= link_to "Manage workflows", workflows_path, class: "btn btn--plain txt-link" %></p>
+  <p class="margin-block-end-double"><%= link_to "Manage workflows", workflows_path, class: "btn btn--plain txt-link", data: { turbo_frame: "_top" } %></p>
 <% end %>
