--- a/app/views/events/event/_comment.html.erb
+++ b/app/views/events/event/_comment.html.erb
@@ -3,17 +3,5 @@
     <%= format_excerpt(event&.eventable.body, length: 200) -%>
   </span>
 
-  <% if event.eventable&.has_attachments? %>
-    <span class="event_attachments margin-block-half flex align-center gap-half">
-      <% event.eventable.attachments.each do |attachment| %>
-        <% if attachment.representable? %>
-          <%= image_tag attachment, class: "attachment attachment--image" %>
-        <% else %>
-          <div class="attachment attachment--file attachment--<%= attachment.filename.extension -%>">
-            <span class="attachment__icon"><%= attachment.filename.extension&.downcase.presence || "unknown" %></span>
-          </div>
-        <% end %>
-      <% end %>
-    </span>
-  <% end %>
+  <%= render "events/event/attachments", eventable: event.eventable %>
 <% end %>
