--- a/app/views/filters/settings/_assignees.html.erb
+++ b/app/views/filters/settings/_assignees.html.erb
@@ -13,13 +13,7 @@
       </span>
     </button>
 
-    <%= tag.dialog class: "margin-block-start-half popup panel flex-column align-start gap-half fill-white shadow txt-small", data: {
-				action: "turbo:before-cache@document->dialog#close keydown->navigable-list#navigate filter:changed->navigable-list#reset toggle->filter#filter",
-        aria: { label: "Assigned to…", aria_description: "Assigned to…" },
-				controller: "filter navigable-list",
-				dialog_target: "dialog",
-				navigable_list_focus_on_selection_value: false,
-				navigable_list_actionable_items_value: true } do %>
+    <%= filter_dialog "Assigned to…" do %>
       <strong class="popup__title txt-nowrap">Assigned to…</strong>
 
       <% if User.active.many? %>
