--- a/app/views/filters/settings/_indexed_by.html.erb
+++ b/app/views/filters/settings/_indexed_by.html.erb
@@ -8,13 +8,7 @@
       </span>
     </button>
 
-    <%= tag.dialog class: "margin-block-start-half popup panel flex-column align-start gap-half fill-white shadow txt-small", data: {
-				action: "turbo:before-cache@document->dialog#close keydown->navigable-list#navigate dialog:show@document->navigable-list#reset",
-        aria: { label: "Sort by…", aria_description: "Sort by…" },
-				controller: "navigable-list",
-				dialog_target: "dialog",
-				navigable_list_focus_on_selection_value: false,
-				navigable_list_actionable_items_value: true } do %>
+    <%= filter_dialog "Sort by…" do %>
       <strong class="popup__title txt-nowrap">Sort by…</strong>
 
       <ul class="popup__list" data-filter-target="list">
