--- a/app/views/filters/settings/_tags.html.erb
+++ b/app/views/filters/settings/_tags.html.erb
@@ -12,13 +12,7 @@
       </span>
     </button>
 
-    <%= tag.dialog class: "margin-block-start-half popup panel flex-column align-start gap-half fill-white shadow txt-small", data: {
-				action: "turbo:before-cache@document->dialog#close keydown->navigable-list#navigate filter:changed->navigable-list#reset toggle->filter#filter",
-        aria: { label: "Tagged…", aria_description: "Tagged…" },
-				controller: "filter navigable-list",
-				dialog_target: "dialog",
-				navigable_list_focus_on_selection_value: false,
-				navigable_list_actionable_items_value: true } do %>
+    <%= filter_dialog "Tagged…" do %>
       <strong class="popup__title txt-nowrap">Tagged…</strong>
 
       <% if user_filtering.tags.many? %>
